--- a/dashboard/css/style.css
+++ b/dashboard/css/style.css
@@ -31,3 +31,10 @@ body {
     border-radius: 5px;
     display: flex;
 }
+
+.box-t-obat {
+    border-radius: 10px;
+    background-color: #c6e1f3;
+    width: 100%;
+    height: 1000px;
+}
