--- a/dashboard/css/style.css
+++ b/dashboard/css/style.css
@@ -37,4 +37,17 @@ body {
     background-color: #c6e1f3;
     width: 100%;
     height: 1000px;
+    margin-bottom: 15px;
+}
+.box-t-pembelian {
+    border-radius: 10px;
+    background-color: #c6e1f3;
+    width: 100%;
+    height: 1000px;
+    margin-bottom: 15px;
+}
+
+.hitung {
+    width: 450px;
+    padding-left: 200px;
 }
